--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -34,7 +34,7 @@ header{
     color: rgb(255, 255, 255)!important;
   }
   .nav__menu-list {
-    color: rgb(0, 0, 0)!important;
+    color: rgb(255, 255, 255)!important;
   }
 }
 .logo{
@@ -69,7 +69,7 @@ header{
   padding: 24px 16px;
   transition: all 0.2s;
   min-height: calc(35vh - 60px);
-  background-color: rgb(255, 255, 255);
+  background-color: #222;
   color: #000000;
   padding-bottom: 60px;
 }
