--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -31,7 +31,7 @@ body {
   place-items: center;
   font-family: var(--font-family);
   color: var(--dark-color);
-  background: var(--bg-gradient);
+  background: linear-gradient(rgb(32, 32, 32), rgb(32, 32, 32));
 }
 
 .orb-canvas {
