--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,8 +6,8 @@
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: linear-gradient(to bottom, rgb(32, 32, 32), rgb(32, 32, 32));
+  --background-end-rgb: linear-gradient(to bottom, rgb(32, 32, 32), rgb(32, 32, 32));
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
