--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -11,6 +11,8 @@
       hsl(var(--hue), 95%, 99%),
       hsl(var(--hue), 95%, 84%));
   scroll-behavior: initial;
+
+  --bs-body-bg: #222!important;
 }
 
 * {
@@ -31,7 +33,7 @@ body {
   place-items: center;
   font-family: var(--font-family);
   color: var(--dark-color);
-  background: linear-gradient(rgb(32, 32, 32), rgb(32, 32, 32));
+  background: linear-gradient(rgb(32, 32, 32), rgb(32, 32, 32))!important;
 }
 
 .orb-canvas {
