--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -73,10 +73,9 @@
         color: rgb(255, 255, 255);
         height: 85px;
         bottom: 0px;
-        border-radius: 0 !important;
+        border-radius: 0 0 3.5px 3.5px !important;
         background: linear-gradient(180deg, transparent 0, rgba(0, 0, 0, .444) 50%, rgba(0, 0, 0, .6) 81%);
         opacity: 1 !important;
-        border-radius: 0px 20px 20px 20px;
         padding: 7px 16px;
 
         h5 {
@@ -136,49 +135,34 @@
 
     .card-project {
 
-        .card-project-footer {
-            opacity: 0;
-            position: absolute;
-            top: 7em;
-            width: 264px !important;
+        
 
-            height: 29px !important;
-            color: rgb(255, 255, 255);
-            height: 80px;
-            bottom: 0px;
-            border-radius: 0 !important;
-            background: linear-gradient(180deg, transparent 0, rgba(0, 0, 0, .444) 50%, rgba(0, 0, 0, .6) 81%);
-            opacity: 1 !important;
-            border-radius: 0px 20px 20px 20px;
-            padding: 7px 16px;
+        @keyframes slide-in-bottom {
+            0% {
+                -webkit-transform: translateY(10px);
+                transform: translateY(10px);
+                opacity: 0;
+            }
+
+            100% {
+                -webkit-transform: translateX(0);
+                transform: translateX(0);
+                opacity: 1;
+            }
         }
 
-    }
-
-    @keyframes slide-in-bottom {
-        0% {
-            -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-            opacity: 0;
+        .swiper-button-next,
+        .swiper-rtl .swiper-button-prev {
+            color: white !important;
+            padding-left: 0.25em !important;
         }
 
-        100% {
-            -webkit-transform: translateX(0);
-            transform: translateX(0);
-            opacity: 1;
+        .swiper-button-prev,
+        .swiper-rtl .swiper-button-next {
+            color: white !important;
+            padding-right: 0.25em !important;
         }
-    }
 
-    .swiper-button-next,
-    .swiper-rtl .swiper-button-prev {
-        color: white !important;
-        padding-left: 0.25em !important;
-    }
-
-    .swiper-button-prev,
-    .swiper-rtl .swiper-button-next {
-        color: white !important;
-        padding-right: 0.25em !important;
     }
 
 }
@@ -232,6 +216,54 @@
         .card-image {
             height: 110px;
             width: 180px;
+        }
+    }
+}
+
+@media (min-width: 992px){
+    .card-project{
+        .card-project-footer {
+            opacity: 0;
+            position: absolute;
+            top: 7.7em;
+            width: 290px !important;
+
+            height: 29px !important;
+            color: rgb(255, 255, 255);
+            height: 80px;
+            bottom: 0px;
+            background: linear-gradient(180deg, transparent 0, rgba(0, 0, 0, .444) 50%, rgba(0, 0, 0, .6) 81%);
+            opacity: 1 !important;
+            border-radius: 0 0 3.5px 3.5px !important;
+            padding: 7px 16px;
+
+            .deployIfNoRepo {
+                position: absolute;
+                left: 15.5em;
+                bottom: 0.4em;
+                text-decoration: none;
+            }
+
+            .repo {
+                position: absolute;
+                left: 15.5em;
+                bottom: 0.4em;
+                text-decoration: none;
+
+            }
+
+            .deploy {
+                position: absolute;
+                left: 13.5em;
+                bottom: 0.4em;
+                text-decoration: none;
+            }
+        }
+
+        .card-image {
+            height: 152px !important;
+            width: 290px !important;
+
         }
     }
 }
