--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100vw;
     top: 0;
+    left: 0;
     display: flex;
     background: linear-gradient(45deg, #363636, #1a324e);
     align-items: center;
