--- a/src/styles/components/_langSelector.scss
+++ b/src/styles/components/_langSelector.scss
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100vw;
     top: 0;
+    left: 0;
     background: linear-gradient(45deg, #363636, #1a324e);
     position: fixed;
     overflow: hidden!important;
